--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "particles.js": "^2.0.0",
     "popper.js": "^1.15.0",
     "vue": "^2.6.10",
+    "vue-page-transition": "^0.2.2",
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "vue-particles": "^1.0.9",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
